--- a/Induction_Writeup.html
+++ b/Induction_Writeup.html
@@ -148,10 +148,14 @@ $(document).ready(function () {
 <p>If similarity ratio = 10 then shared label p(Y) = 1/(1+((0.1*0.5)/0.05)) = 0.5 while non-shared label p(Y) = 1/(1+((1*0.5)/0.05)) = 0.09.</p>
 <p>If similarity ratio = 100 then shared label p(Y) = 1/(1+((0.1 * 0.5)/0.005)) = 0.09 while non-shared label p(Y) = 1/(1+((1*0.5)/0.005)) = 0.01.</p>
 <p>Adding a label still provides a 10%age point increase in p(Y) if the Y picture is 78.125 times less similar to the target than the X picture. (code: 1/(1+((0.1*0.5)/0.0064)) - 1/(1+((1*0.5)/0.0064)) which produces a 10 percentage point increase in probability of choosing Y.)</p>
-<pre class="r"><code># 
-
-
-# </code></pre>
+<p>Finally, in the discussion section of the paper we note that we can estimate the relative similarity of pictures in the Different Sense condition by looking at the proportion of trials on which participants choose the Dissimilar Test picture in the No Label condition of Experiment 1.</p>
+<ul>
+<li>p(y) = 0.27 = 1/ (1+((1*x)/1*y))</li>
+<li>0.27 * (1+((1*x)/1*y)) = 1</li>
+<li>0.27 * (1+(ratio)) = 1</li>
+<li>1+(ratio) = 1/0.27</li>
+<li>ratio = 1/0.27 - 1 = 2.7037037</li>
+</ul>
 </div>
 <div id="experiment-1" class="section level4">
 <h4>Experiment 1</h4>
