update materials and association analyses
fixed a small error in the association analyses

--- a/Induction_Writeup.html
+++ b/Induction_Writeup.html
@@ -156,6 +156,8 @@ $(document).ready(function () {
 <li>1+(ratio) = 1/0.27</li>
 <li>ratio = 1/0.27 - 1 = 2.7037037</li>
 </ul>
+<p>We can use this value to calculate what the predicted effect of shared label should be in this case.</p>
+<p>If the Y picture is 2.7 times less similar to the target than the X picture. (code: 1/(1+((0.1*0.5)/0.1851)) - 1/(1+((1*0.5)/0.1851)) then adding a shared label produces a 52 percentage point increase in probability of choosing Y, from 0.27 to 0.79.</p>
 </div>
 <div id="experiment-1" class="section level4">
 <h4>Experiment 1</h4>
