bayes factor analysis

--- a/Induction_Writeup.html
+++ b/Induction_Writeup.html
@@ -677,6 +677,14 @@ $(document).ready(function () {
 ## sample estimates:
 ## mean of x 
 ## 0.1666667</code></pre>
+<pre><code>## Bayes factor analysis
+## --------------
+## [1] Alt., r=0.707 : 0.2831734 ±0.02%
+## 
+## Against denominator:
+##   Null, mu = 0 
+## ---
+## Bayes factor type: BFoneSample, JZS</code></pre>
 </div>
 <div id="children-1" class="section level3">
 <h3>Children</h3>
@@ -686,6 +694,8 @@ $(document).ready(function () {
 <pre><code>## [1] &quot;Ambig 4 yrs 24&quot;</code></pre>
 <pre><code>## [1] &quot;3 yrs girls =  27&quot;</code></pre>
 <pre><code>## [1] &quot;4 yrs girls =  22&quot;</code></pre>
+<pre><code>## [1] &quot;Tested in Edinb =  45&quot;</code></pre>
+<pre><code>## [1] &quot;Tested in Berkeley =  52&quot;</code></pre>
 <pre><code>##   Age Age.Months.FUN1 Age.Months.FUN2 Age.Months.FUN3
 ## 1   3        42.98541              36        47.86849
 ## 2   4        51.61667              48        59.55890</code></pre>
@@ -869,6 +879,20 @@ $(document).ready(function () {
 ## sample estimates:
 ## mean of x 
 ## 0.3645833</code></pre>
+<pre><code>## Loading required package: coda</code></pre>
+<pre><code>## ************
+## Welcome to BayesFactor 0.9.12-2. If you have questions, please contact Richard Morey (richarddmorey@gmail.com).
+## 
+## Type BFManual() to open the manual.
+## ************</code></pre>
+<pre><code>## Bayes factor analysis
+## --------------
+## [1] Alt., r=0.707 : 0.1573786 ±0%
+## 
+## Against denominator:
+##   Null, mu = 0 
+## ---
+## Bayes factor type: BFoneSample, JZS</code></pre>
 </div>
 <div id="comparison-of-experiments-1-and-2" class="section level2">
 <h2>Comparison of Experiments 1 and 2</h2>
